--- a/src/views/frontend/LoginArtesa/src/Components/resetPassword/ResetPassword.css
+++ b/src/views/frontend/LoginArtesa/src/Components/resetPassword/ResetPassword.css
@@ -41,7 +41,8 @@
 .ResetPasswordPage .container .imgDiv img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   top: 0;
   bottom: 0;
   right: 0;
@@ -69,7 +70,8 @@
   left: 0;
   right: 0;
   justify-content: space-between;
-  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
 }
 .ResetPasswordPage .container .imgDiv .text {
   color: var(--whiteColor);
@@ -186,4 +188,4 @@
   .ResetPasswordPage .container .form .inputDiv .input {
     padding: 0.6rem;
   }
-}
+}/*# sourceMappingURL=ResetPassword.css.map */
