--- a/src/views/frontend/LoginArtesa/src/Components/Dashboard/Body Section/Banner/Banner.css
+++ b/src/views/frontend/LoginArtesa/src/Components/Dashboard/Body Section/Banner/Banner.css
@@ -8,6 +8,7 @@
 .banner img {
   width: 100%;
   max-height: 200px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   display: block;
-}
+}/*# sourceMappingURL=Banner.css.map */
