--- a/src/views/frontend/LoginArtesa/index.html
+++ b/src/views/frontend/LoginArtesa/index.html
@@ -41,6 +41,10 @@
         https://d1bqegutwmfn98.cloudfront.net 
         https://www.google.com 
         https://www.gstatic.com;
+      frame-src 'self' 
+        https://www.google.com 
+        https://recaptcha.google.com 
+        https://www.recaptcha.google.com;
       media-src 'self' 
         https://artesa-documents-staging.s3.us-east-1.amazonaws.com 
         https://*.s3.amazonaws.com;
@@ -48,7 +52,6 @@
       base-uri 'self';
       form-action 'self' 
         https://ec2-44-216-131-63.compute-1.amazonaws.com;
-      frame-ancestors 'none';
       upgrade-insecure-requests;
     ">
 
